@@ -1,0 +1,63 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <link href="./bootstrap.min.css" rel="stylesheet" />
+  </head>
+
+  <body>
+    <div class="d-flex flex-column p-3">
+      <div class="mb-3">
+        <label for="comment-visible-input" class="form-label"
+          >Comments Visible</label
+        ><br />
+        <div id="comment-visible-input" class="btn-group">
+          <input
+            type="radio"
+            class="btn-check"
+            name="comment-visible-input"
+            id="comment-visible-input-on"
+            autocomplete="off"
+            checked
+          />
+          <label class="btn btn-outline-primary" for="comment-visible-input-on"
+            >On</label
+          >
+          <input
+            type="radio"
+            class="btn-check"
+            name="comment-visible-input"
+            id="comment-visible-input-off"
+            autocomplete="off"
+          />
+          <label class="btn btn-outline-primary" for="comment-visible-input-off"
+            >Off</label
+          >
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="comment-opacity-input" class="form-label"
+          >Comment Opacity</label
+        >
+        <select id="comment-opacity-input" class="form-select">
+          <option value="high">Strong</option>
+          <option value="medium">Medium</option>
+          <option value="low">Weak</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="comment-speed-input" class="form-label"
+          >Comment Speed</label
+        >
+        <select id="comment-speed-input" class="form-select">
+          <option value="high">Fast</option>
+          <option value="medium">Medium</option>
+          <option value="low">Slow</option>
+        </select>
+      </div>
+    </div>
+
+    <script src="./index.js"></script>
+  </body>
+</html>
